# modlang

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/modlang/: __init__.py  checker.py  cli.py  discover.py  parser.py  translate.py  ui.py
tests/: test_checker.py  test_cli.py  test_discover.py  test_parser.py  test_translate.py  test_ui.py
